force-app/main/default/objects/TM_Session__c/TM_Session__c.object-meta.xml
<CustomObject>
    <label>Treatment Session</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Program Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>