force-app/main/default/objects/TM_Session__c/fields/Age_at_instruction__c.field-meta.xml
<CustomField>
    <fullName>Age_at_instruction__c</fullName>
    <formula>(Date__c - Subject__r.Name__r.Birthdate) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (At instruction)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>