force-app/main/default/objects/TM_Session__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Study_Participant__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>TM Teacher</value>
        </filterItems>
        <filterItems>
            <field>Study_Participant__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>PCT Therapist</value>
        </filterItems>
        <filterItems>
            <field>Study_Participant__c.Subject_Type__c</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Study_Participant__c</referenceTo>
    <relationshipLabel>Treatment Sessions (Instructor)</relationshipLabel>
    <relationshipName>Program_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>