force-app/main/default/objects/TM_Session__c/fields/Session_Focus__c.field-meta.xml
<CustomField>
    <fullName>Session_Focus__c</fullName>
    <label>Session Focus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>