force-app/main/default/objects/TM_Session__c/fields/Session_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Session_Subtype__c</fullName>
    <label>Session Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TM Intro</fullName>
            </value>
            <value>
                <fullName>TM Instruction</fullName>
            </value>
            <value>
                <fullName>Day 1 Checking</fullName>
            </value>
            <value>
                <fullName>Day 2 Checking</fullName>
            </value>
            <value>
                <fullName>Day 3 Checking</fullName>
            </value>
            <value>
                <fullName>10 Day Check</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>TM Booster</fullName>
            </value>
            <value>
                <fullName>PCT Explanation</fullName>
            </value>
            <value>
                <fullName>Trauma Education</fullName>
            </value>
            <value>
                <fullName>Diary</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>PCT Booster</fullName>
            </value>
            <value>
                <fullName>Sessions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>