force-app/main/default/objects/TM_Session__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Study_Participant__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>TM_Subject</value>
        </filterItems>
        <filterItems>
            <field>Study_Participant__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PCT_Subject</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Study_Participant__c</referenceTo>
    <relationshipName>Program_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>