force-app/main/default/objects/TM_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Date__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Session_Subtype__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>